--- a/树/树的术语.md
+++ b/树/树的术语.md
@@ -33,3 +33,23 @@
     当要删除的节点有两个子节点时，一般要找到前驱节点或后继节点来代替它的位置
     前驱节点：左子树中的最大值（最右下角的节点）
     后继节点：右子树的最小值（最左下角的节点）
+  20.红黑树的规则：
+    (1)节点必须是红色节点或者黑色节点
+    (2)根节点必须是黑色节点
+    (3)每个叶节点都是黑色的空节点(Nil节点)
+    (4)每个红色节点的两个子节点都是黑色节点(树中不会有两个连续的红色节点)
+    (5)从任意节点到其每个叶节点的所有路径都包含相同数目的黑色节点
+  21.红黑树能做到相对平衡的原因：
+    从根节点到叶节点的最长可能路径，不会超过最短可能路径的2倍
+    因为性质(4)确保了两个红色节点不可能相邻，性质(5)确保了从根节点到叶节点的路径长度是一样的
+    最短可能路径全是黑色节点，最长可能路径是红黑相间，这就表明最长可能路径不可能超过最短可能路径的两倍
+  22.红黑树的变换：
+    (1)变色：在不符合红黑树规则时，需要对一些节点进行变色(新插入的节点最好初始为红色)
+    (2)左旋转：逆时针旋转红黑树的两个节点，使得父节点被自己的右孩子取代，自己成为原来位置的左孩子
+    (3)右旋转：顺时针旋转红黑树的两个节点，使得父节点被自己的左孩子取代，自己成为原来位置的右孩子
+  23.红黑树插入节点时可能的情况：
+    (1)插入根节点：直接将节点设为根节点并变色即可
+    (2)新节点的父节点是黑色：直接插入并新增其两个黑色Nil子节点即可
+    (3)父红叔红祖黑：变为父黑叔黑祖红(但是祖父节点的父节点也可能是红色，需要进行递归变色，且递归变色到根节点时，需要进行旋转)
+    (4)父红叔黑祖黑(且新节点为左孩子)：变为父黑叔黑祖红 => 且以祖父元素为根进行右旋转
+    (5)父红叔黑祖黑(且新节点为右孩子)：以父节点为根左旋转 => 将旋转后的父节点看作新插入的红色节点即可(即重复情况四)
